--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ env_logger = "0.11.3"
 poise = "0.5.7"
 # poise_macros = "0.6.1"
 tokio = { version = "1.36.0", features = ["full"] }
+chrono = "0.4.38"
